cmake_minimum_required(VERSION 3.13)

add_executable(map_generator "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp")

add_subdirectory(Graphic)
add_subdirectory(Utils)
add_subdirectory(WaveFunctionCollapse)

target_sources(map_generator PRIVATE ${GRAPHIC_SOURCES} ${UTILS_SOURCES} ${WAVEFUNCTIONCOLLASPE_SOURCE})

INCLUDE(FindPkgConfig)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
PKG_SEARCH_MODULE(SDL2TTF REQUIRED SDL2_ttf>=2.0.0)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS} ${SDL2TTF_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES} ${SDL2TTF_LIBRARIES})

target_include_directories(map_generator PRIVATE
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphic"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utils"
    "${CMAKE_CURRENT_SOURCE_DIR}/WaveFunctionCollapse"
    ${SDL2_INCLUDE_DIRS}
    ${SDL2IMAGE_INCLUDE_DIRS}
    ${SDL2TTF_INCLUDE_DIRS}
)
